--- a/index.html
+++ b/index.html
@@ -41,13 +41,20 @@
       </nav>
     </header>
     <main>
-      <section>
-        <h1>Путешествия по Байкалу</h1>
-        <p>
-          Туры по самому красивому месту России. Поехали с нами за новыми
-          впечатлениями!
-        </p>
-        <a href="">подобрать тур</a>
+      <section class="hero">
+        <div class="container">
+          <h1 class="hero__title">Путешествия по Байкалу</h1>
+          <p class="hero__text">
+            Туры по самому красивому месту России. Поехали с нами за новыми
+            впечатлениями!
+          </p>
+          <a href="" class="hero__link">подобрать тур</a>
+          <a href="" class="hero__link2">
+            <svg class="hero__icons" width="13" height="18">
+              <use href="./images/icons.svg#icon-arrow"></use>
+            </svg>
+          </a>
+        </div>
       </section>
       <!-- ------------------------------------------------------------------<h2>categories</h2> -------------------->
       <section class="categories">
