--- a/index.html
+++ b/index.html
@@ -20,25 +20,54 @@
   </head>
   <body>
     <!-- ----------------------------------------------HEADER---------HEADER------------HEADER---------------- -->
-    <header>
-      <img src="./images/" alt="znak" />
-      <a href="./index.html ">Байкальский отдых Турагентство</a>
-      <ul>
-        <li><a href="tel:+380509786444">8-924-3-541-540</a></li>
-        <li>
-          <a href="mailto:baikalholiday@mail.ru ">baikalholiday@mail.ru</a>
-        </li>
-      </ul>
-      <button type="button">Обратный звонок</button>
-      <nav>
-        <ul>
-          <li><a href="">Бронирование</a></li>
-          <li><a href="">Экскурсии</a></li>
-          <li><a href="">Туры на Байкал</a></li>
-          <li><a href="">О Байкале</a></li>
-          <li><a href="">О нас</a></li>
-        </ul>
-      </nav>
+    <header class="header">
+      <div class="container">
+        <div class="flex-header">
+          <a href="./index.html " class="flex-header__link-logo">
+            <svg class="header__logo" width="54" height="54">
+              <use href="./images/icons.svg#icon-Group-28"></use>
+            </svg>
+            <div class="header__title-text">
+              Байкальский отдых
+              <span class="header__text"> Турагентство </span>
+            </div>
+          </a>
+          <ul class="mail-tel-list">
+            <li class="mail-tel-list__element">
+              <a href="tel:+380509786444" class="mail-tel-list__link"
+                >8-924-3-541-540</a
+              >
+            </li>
+            
+              <a
+                href="mailto:baikalholiday@mail.ru "
+                class="mail-tel-list__link"
+                >baikalholiday@mail.ru</a
+              >
+            </li>
+          </ul>
+          <button type="button" class="header__btn">Обратный звонок</button>
+        </div>
+        <nav>
+          <ul class="header-nav">
+            <li class="header-nav__item">
+              <a href="" class="header-nav__link">Бронирование</a>
+            </li>
+            <li class="header-nav__item">
+              <a href="" class="header-nav__link">Экскурсии</a>
+            </li>
+            <li class="header-nav__item">
+              <a href="" class="header-nav__link">Туры на Байкал</a>
+            </li>
+            <li class="header-nav__item">
+              <a href="" class="header-nav__link">О Байкале</a>
+            </li>
+            <li class="header-nav__item">
+              <a href="" class="header-nav__link">О нас</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <main>
       <section class="hero">
